--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <meta name="description" content="Crow的自用参数免费分享，给每一个热爱hvh的玩家最好的免费体验">
 <meta name="keywords" content="乌鸦,Crow,nix,nixware,nl,neverlose,lw,csgo,hvh,参数">
 
-
+<link rel="stylesheet" href="http://gank.io//static/stylesheets/skeleton.css">
+<link rel="stylesheet" href="http://gank.io//static/stylesheets/typo.css">
+<link rel="stylesheet" href="http://gank.io//static/stylesheets/archives.css">
 
 
 
