--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Crow | 努力做好喜欢的事</title>
-<meta name="description" content="Crow的自用参数免费分享，给每一个热爱hvh的玩家最好的免费体验">
-<meta name="keywords" content="乌鸦,Crow,nix,nixware,nl,neverlose,lw,csgo,hvh,参数">
+---
+layout: page
+title: Crow | 努力做好喜欢的事
+header: 我的好基友们
+group: navigation
+index: 5
+---
+
+{% include codepiano/setup %}
+
+
+
+
 <link rel="stylesheet" href="http://gank.io//static/stylesheets/skeleton.css">
 <link rel="stylesheet" href="http://gank.io//static/stylesheets/typo.css">
 <link rel="stylesheet" href="http://gank.io//static/stylesheets/archives.css">
